kubernetes/develop/crowdshift-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crowdshift-frontend
  labels:
    app: crowdshift
    tier: frontend
    environment: development
spec:
  selector:
    matchLabels:
      app: crowdshift
      tier: frontend
      environment: development
  template:
    metadata:
      labels:
        app: crowdshift
        tier: frontend
        environment: development
    spec:
      containers:
        - name: nginx
          image: IMAGE_URL
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 1000m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: crowdshift-frontend-nginx-config
