kubernetes/develop/crowdshift-frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: crowdshift-frontend
  labels:
    app: crowdshift
    tier: frontend
    environment: development
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - develop.crowdshift.com
